# steph

./: LICENSE  README.md  stack.yaml  steph.cabal
src/: Steph.hs
src/Endpoints/: ScoreboardV2.hs
src/Splits/ScoreboardV2/: Available.hs  GameHeader.hs  LastMeeting.hs  LineScore.hs  SeriesStanding.hs  Standing.hs  TeamLeaders.hs  TicketLink.hs
