name:                steph
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/zmbc/steph#readme
license:             BSD3
license-file:        LICENSE
author:              Zeb Burke-Conte
maintainer:          zmbc@uw.edu
copyright:           Zeb Burke-Conte
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Steph
  build-depends:       base >= 4.7 && < 5
                     , kawhi >= 0.3.0
                     , time
                     , aeson
                     , bytestring
                     , wreq
                     , text
                     , http-conduit
                     , http-client
  default-language:    Haskell2010

executable steph-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , steph
  default-language:    Haskell2010

test-suite steph-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , steph
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/zmbc/steph
